# test-tasks

./: README.md
ctest-labels/: CMakeLists.txt  Makefile
ctest-labels/include/module_a/: module_a.hpp
ctest-labels/include/module_b/: module_b.hpp
ctest-labels/libs/: CMakeLists.txt
ctest-labels/libs/module_a/: CMakeLists.txt  module_a.cpp
ctest-labels/libs/module_a/t/: CMakeLists.txt  test_module_a_large.cpp  test_module_a_medium.cpp  test_module_a_small.cpp
ctest-labels/libs/module_b/: CMakeLists.txt  module_b.cpp
ctest-labels/libs/module_b/t/: CMakeLists.txt  test_module_b_large.cpp  test_module_b_medium.cpp  test_module_b_small.cpp
ctest-labels/src/: CMakeLists.txt  main.cpp
data-structures/: README.md
data-structures/binary-heap/: CMakeLists.txt  example.cpp
data-structures/binary-heap/include/: binary-heap.hpp
data-structures/binary-heap/tests/: CMakeLists.txt  insert.cpp  remove.cpp
data-structures/binary-search-tree/: CMakeLists.txt  example.c  example.cpp
data-structures/binary-search-tree/include/: binary-search-tree.h  binary-search-tree.hpp
data-structures/binary-search-tree/src/: CMakeLists.txt  binary-search-tree.c  binary-search-tree.cpp
data-structures/binary-search-tree/tests/: CMakeLists.txt  add.c  delete.c  destroy.c
data-structures/double-ended-queue/: CMakeLists.txt  example.cpp
data-structures/double-ended-queue/include/: queue.hpp
data-structures/double-ended-queue/src/: CMakeLists.txt  queue.cpp
data-structures/hash-table/: CMakeLists.txt  example.c
data-structures/hash-table/include/: hash-table.h
data-structures/hash-table/src/: CMakeLists.txt  hash-table.c
data-structures/hash-table/tests/: CMakeLists.txt  add.c  delete.c  destroy.c
data-structures/linked-list/: CMakeLists.txt  example.c  example.cpp
data-structures/linked-list/include/: linked-list.h  linked-list.hpp
data-structures/linked-list/src/: CMakeLists.txt  linked-list.c  linked-list.cpp
data-structures/linked-list/tests/: CMakeLists.txt  destroy.c  pop.c  pop.cpp  push.c  push.cpp
data-structures/queue/: CMakeLists.txt  example.c
data-structures/queue/include/: queue.h
data-structures/queue/src/: CMakeLists.txt  queue.c
data-structures/queue/tests/: CMakeLists.txt  destroy.c  pop.c  push.c
data-structures/ring-buffer/c-implementation/: CMakeLists.txt  example.c
data-structures/ring-buffer/cpp-implementation/: CMakeLists.txt  example.cpp
data-structures/stack/: CMakeLists.txt  Makefile  example.c  example.cpp
data-structures/stack/include/: stack.h  stack.hpp
data-structures/stack/src/: CMakeLists.txt  stack.c  stack.cpp
data-structures/stack/tests/: CMakeLists.txt  destroy.c  pop.c  pop.cpp  push.c  push.cpp
dijkstra/: CMakeLists.txt  example.cpp
dijkstra/include/: dijkstra.hpp  graph.hpp
dijkstra/src/: CMakeLists.txt  dijkstra.cpp  graph.cpp
graph/: README.md  example.cpp
graph/dijkstra/: example.cpp
graph/dijkstra/include/: dijkstra.hpp  graph.hpp
graph/dijkstra/src/: dijkstra.cpp  graph.cpp
graph/graph/: CMakeLists.txt  example.cpp
graph/graph/include/: graph.hpp
graph/graph/src/: CMakeLists.txt  graph.cpp
merge-arrays/: main.cpp
multithreading/: README.md
multithreading/producer-consumer/: CMakeLists.txt  Makefile
multithreading/producer-consumer-cpp/: CMakeLists.txt  Makefile  main.cpp
multithreading/producer-consumer/src/: CMakeLists.txt
multithreading/producer-consumer/src/consumer/: consumer.h
multithreading/producer-consumer/src/scheduler/: CMakeLists.txt
multithreading/producer-consumer/src/signal/: signal.h
other/: README.md
other/serialize-tree/: README.md
other/serialize-tree/src/: CMakeLists.txt
other/serialize-tree/tests/: CMakeLists.txt
producer-consumer/: README.md
producer-consumer/src/: main.c
producer-consumer/src/consumer/: CMakeLists.txt  consumer.c  consumer.h
producer-consumer/src/internal/: context.h  errors.h  state.h  task.h
producer-consumer/src/producer/: CMakeLists.txt  producer.c  producer.h
producer-consumer/src/scheduler/: scheduler.c  scheduler.h
producer-consumer/src/signal/: CMakeLists.txt  signal.c
search-algorithms/: README.md
search-algorithms/binary-sort/: CMakeLists.txt  example.cpp
search-algorithms/binary-sort/include/: binary-search.hpp
search-algorithms/binary-sort/tests/: CMakeLists.txt  search.cpp
serialize-tree/: CMakeLists.txt  Makefile  README.md
serialize-tree/examples/: in_file.txt
serialize-tree/src/: CMakeLists.txt  main.cpp
serialize-tree/src/exception/: exception.cpp  exception.hpp
serialize-tree/src/node/: CMakeLists.txt  i-node.hpp  node.cpp  node.hpp
serialize-tree/src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
serialize-tree/src/tree/: CMakeLists.txt  tree.cpp  tree.hpp
serialize-tree/tests/: CMakeLists.txt  tests.cpp  tests.hpp  tests_empty_tree.cpp  tests_tree.cpp
smart-pointer/: CMakeLists.txt  example.cpp
smart-pointer/include/: smart-pointer.hpp
smart-pointer/simple/: example.cpp
sorting-algorithms/: README.md
sorting-algorithms/bubble-sort/: example.cpp
sorting-algorithms/bubble-sort/include/: bubble-sort.hpp
sorting-algorithms/bubble-sort/tests/: sort.cpp
sorting-algorithms/counting-sort/: CMakeLists.txt  example.cpp
sorting-algorithms/counting-sort/include/: counting-sort.hpp
sorting-algorithms/counting-sort/tests/: sort.cpp
sorting-algorithms/graph/include/: graph.hpp
sorting-algorithms/heap-sort/: example.cpp
sorting-algorithms/heap-sort/include/: heap-sort.hpp
sorting-algorithms/heap-sort/tests/: sort.cpp
sorting-algorithms/insertion-sort/: CMakeLists.txt  example.cpp
sorting-algorithms/insertion-sort/include/: insertion-sort.hpp
sorting-algorithms/insertion-sort/tests/: sort.cpp
sorting-algorithms/merge-sort/: example.cpp
sorting-algorithms/merge-sort/include/: merge-sort.hpp
sorting-algorithms/merge-sort/tests/: sort.cpp
sorting-algorithms/quick-sort/: CMakeLists.txt  example.cpp
sorting-algorithms/selection-sort/: example.cpp
sorting-algorithms/selection-sort/tests/: CMakeLists.txt  sort.cpp
string-pattern/: main.cpp
(+20 files in other folders)
